@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.sratim.co.il"
        name="Sratim"
-       version="1.1.9"
+       version="1.2.0"
        provider-name="Lev Waisberg">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.themoviedb.org" version="1.0.7"/>
+    <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
     <import addon="metadata.common.imdb.com" version="2.1.3"/>
+	<import addon="metadata.common.youtubetrailers" version="1.0.4"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="he"
