@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <strings>
     <string id="30000">Enable full cast credits</string>
-    <string id="30001">Get Trailers from HD-Trailers.net in </string>
+    <string id="30001">Get Trailers from </string>
     <string id="30002">Get fanart from</string>
     <string id="30003">Get thumb (Movie Poster) from </string>
     <string id="30004">Get rating from </string>
