@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
 	<setting label="30000" type="bool" id="fullcredits" default="false" />
-	<setting label="30001" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="480p" />
-	<setting label="30002" type="labelenum" values="MovieDB|Google|None" id="fanart" default="MovieDB" />
-	<setting label="30003" type="labelenum" values="Sratim|TMDB" id="thumbFrom" default="Sratim" />
+	<setting label="30001" type="labelenum" values="YouTube|None" id="trailersFrom" default="YouTube" />
+	<setting label="30002" type="labelenum" values="MovieDB|None" id="fanart" default="MovieDB" />
+	<setting label="30003" type="labelenum" values="Sratim|TMDB|MoviePosterDB" id="thumbFrom" default="Sratim" />
 	<setting label="30004" type="labelenum" values="IMDB|Sratim" id="ratingFrom" default="Sratim"/>
 	<setting label="30005" type="labelenum" values="Hebrew|English" id="titleLang" default="Hebrew"/>
 </settings>
